<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_info"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.eclipsegroup.dorel.financetime.main.fragments.InfoFragment"
    android:weightSum="1"
    android:padding="20dp">

    <TextView
        android:text="@string/title_info"
        android:layout_width="match_parent"
        android:textColor="#000000"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"/>
    <TextView
        android:text="@string/first_row_info"
        android:layout_width="match_parent"
        android:textColor="@color/secondary_text_color"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="20sp"
        android:layout_marginTop="10dp" />

    <TextView
        android:text="@string/second_row_inf"
        android:layout_width="match_parent"
        android:textColor="@color/secondary_text_color"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_weight="0.04"
        android:textSize="20sp" />

    <TextView
        android:text="@string/copy_row_info"
        android:layout_width="match_parent"
        android:textColor="#000000"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="15sp" />

</LinearLayout>